Minor changes related to typescript build

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,9 +5,11 @@
     "tasks": [
         {
             "label": "build",
-            "type": "npm",
-            "script": "build:ts",
-            "problemMatcher": []
+            "type": "typescript",
+            "tsconfig": "tsconfig.json",
+            "problemMatcher": [
+                "$tsc"
+            ]
         }
     ]
 }
