--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
             "env": {
                 "NODE_ENV": "development"
             },
-            //"console": "internalConsole",
+            "console": "internalConsole",
             "sourceMaps": true,
             "outFiles": [ "${workspaceRoot}/dist/**/*.js" ]
         },
