--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "local-init": "npm install -g webpack && npm install -g webpack-dev-server",
     "prestart": "npm run build",
     "full": "npm run build && npm run test && npm run lint && npm run site",
-    "test": "mocha -r ts-node/register src/test-setup.ts src/**/*.spec.ts src/**/*.spec.tsx",
+    "test": "mocha -r ts-node/register src/test-setup.ts src/*.spec.ts src/**/*.spec.ts src/**/*.spec.tsx",
     "lint": "tslint ./src/**",
     "build:ts": "tsc",
     "build:wp": "webpack --p --progress",
