--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/enzyme": "^3.1.5",
     "@types/enzyme-adapter-react-16": "^1.0.1",
     "@types/mocha": "^2.2.44",
+    "@types/radium": "^0.18.23",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
@@ -46,13 +47,14 @@
     "enzyme-adapter-react-16": "^1.1.0",
     "express": "^4.16.2",
     "mocha": "^4.0.1",
+    "radium": "^0.19.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "typescript": "^2.6.2",
     "source-map-loader": "^0.2.3",
+    "typescript": "^2.6.2",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
