--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@types/mocha": "^2.2.44",
     "@types/radium": "^0.18.23",
     "@types/react": "^16.0.25",
+    "@types/react-dnd": "^2.0.34",
+    "@types/react-dnd-html5-backend": "^2.1.8",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
     "@types/redux": "^3.6.0",
@@ -49,6 +51,8 @@
     "mocha": "^4.0.1",
     "radium": "^0.19.6",
     "react": "^16.2.0",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
