--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^16.0.25",
     "@types/react-dnd": "^2.0.34",
     "@types/react-dnd-html5-backend": "^2.1.8",
+    "@types/react-dnd-multi-backend": "^3.0.0",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
     "@types/redux": "^3.6.0",
@@ -53,6 +54,7 @@
     "react": "^16.2.0",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
+    "react-dnd-multi-backend": "^3.0.4",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
