--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "source-map-loader": "^0.2.3",
+    "store": "^2.0.12",
     "typescript": "^2.7.2",
     "webpack": "^3.11.0"
   },
