--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/chai": "^4.1.2",
     "@types/enzyme": "^3.1.9",
     "@types/enzyme-adapter-react-16": "^1.0.2",
+    "@types/lodash": "^4.14.104",
     "@types/mocha": "^2.2.48",
     "@types/radium": "^0.18.24",
     "@types/react": "^16.0.38",
@@ -50,6 +51,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.16.2",
+    "lodash": "^4.17.5",
     "mocha": "^4.1.0",
     "radium": "^0.19.6",
     "react": "^16.2.0",
