--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/lodash": "^4.14.104",
     "@types/mocha": "^2.2.48",
     "@types/radium": "^0.18.24",
-    "@types/react": "^16.0.38",
+    "@types/react": "^16.0.40",
     "@types/react-dnd": "^2.0.36",
     "@types/react-dnd-html5-backend": "^2.1.9",
     "@types/react-dnd-multi-backend": "^3.0.1",
@@ -54,7 +54,7 @@
     "lodash": "^4.17.5",
     "mocha": "^4.1.0",
     "radium": "^0.19.6",
-    "react": "^16.2.0",
+    "react": "^16.3.0-alpha.1",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
     "react-dnd-multi-backend": "^3.1.2",
